<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupwalli">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/productsansbold"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/nameIcon"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="20dp"
                android:layout_height="20dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:fontFamily="@font/productsans"
                    android:hint="@string/email_address"
                    android:cursorVisible="true"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:textColor="#212121"
                    android:textColorHint="#616161"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center">


            <ImageView
                android:id="@+id/localityIcon"
                android:layout_width="20dp"
                android:layout_height="20dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false">

                <EditText
                    android:id="@+id/localityEditText"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:fontFamily="@font/productsans"
                    android:hint="password"
                    android:cursorVisible="true"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:textColor="#212121"
                    android:textColorHint="#616161"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center">


            <ImageView
                android:id="@+id/locality"
                android:layout_width="20dp"
                android:layout_height="20dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmTIl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false">

                <EditText
                    android:id="@+id/confirmET"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:fontFamily="@font/productsans"
                    android:hint="Confirm Password"
                    android:cursorVisible="true"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:textColor="#212121"
                    android:textColorHint="#616161"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="24dp">


            <ImageView
                android:id="@+id/contactIcon"
                android:layout_width="20dp"
                android:layout_height="20dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false">


            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/btnSignUp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        app:fabSize="normal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:elevation="100dp"
        android:focusable="true"
        android:src="@drawable/ic_chevron_right_black_24dp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/signupToLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/productsansbold"
        android:text="@string/Already_Registered_Login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
